@@ -1,3 +1,9 @@
+2013-10-02  Sebastien Binet  <binet@farnsworth>
+
+	* tagging PyUtils-00-13-12
+	* protect against identical files under different paths/names
+	* M python/AthFile/impl.py
+
 2013-09-30  Sebastien Binet  <binet@farnsworth>
 
 	* tagging PyUtils-00-13-11
